@@ -1,3 +1,14 @@
+2001-07-24  John Kirkland  <jpk@bl.org>
+
+	* Re-fixed bug #442445 "sub-album permission".  My fix earlier
+	  was not thorough enough in its checking.
+
+2001-07-24  John Kirkland  <jpk@bl.org>
+
+	* Fixed bug #442445 "sub-album permissions".  Just skipping
+	  over nested albums if I cannot view them.
+
+
 2001-07-22  Bharat Mediratta  <bharat@menalto.com>
 
 	* Fixed bug #443479 "invalid PHP function in functions.inc"
